# packages/openapi/api/src/models/FeatureSpecRequest.ts
@@ -53,13 +53,19 @@ export interface FeatureSpecRequest {
    * @type {number}
    * @memberof FeatureSpecRequest
    */
-  maxLimit?: number | null
+  maxLimit?: number
   /**
    * Amount in cents
    * @type {number}
    * @memberof FeatureSpecRequest
    */
   unitPrice?: number | null
+  /**
+   *
+   * @type {number}
+   * @memberof FeatureSpecRequest
+   */
+  unitsIncluded?: number | null
   /**
    *
    * @type {string}
@@ -89,6 +95,9 @@ export function FeatureSpecRequestFromJSONTyped(
       : AggregationEnumFromJSON(json['aggregation']),
     maxLimit: !exists(json, 'max_limit') ? undefined : json['max_limit'],
     unitPrice: !exists(json, 'unit_price') ? undefined : json['unit_price'],
+    unitsIncluded: !exists(json, 'units_included')
+      ? undefined
+      : json['units_included'],
     providerId: !exists(json, 'provider_id') ? undefined : json['provider_id'],
   }
 }
@@ -108,6 +117,7 @@ export function FeatureSpecRequestToJSON(
     aggregation: AggregationEnumToJSON(value.aggregation),
     max_limit: value.maxLimit,
     unit_price: value.unitPrice,
+    units_included: value.unitsIncluded,
     provider_id: value.providerId,
   }
 }
