# packages/openapi/api/src/models/PatchedFeatureSpecRequest.ts
@@ -53,13 +53,19 @@ export interface PatchedFeatureSpecRequest {
    * @type {number}
    * @memberof PatchedFeatureSpecRequest
    */
-  maxLimit?: number | null
+  maxLimit?: number
   /**
    * Amount in cents
    * @type {number}
    * @memberof PatchedFeatureSpecRequest
    */
   unitPrice?: number | null
+  /**
+   *
+   * @type {number}
+   * @memberof PatchedFeatureSpecRequest
+   */
+  unitsIncluded?: number | null
   /**
    *
    * @type {string}
@@ -91,6 +97,9 @@ export function PatchedFeatureSpecRequestFromJSONTyped(
       : AggregationEnumFromJSON(json['aggregation']),
     maxLimit: !exists(json, 'max_limit') ? undefined : json['max_limit'],
     unitPrice: !exists(json, 'unit_price') ? undefined : json['unit_price'],
+    unitsIncluded: !exists(json, 'units_included')
+      ? undefined
+      : json['units_included'],
     providerId: !exists(json, 'provider_id') ? undefined : json['provider_id'],
   }
 }
@@ -110,6 +119,7 @@ export function PatchedFeatureSpecRequestToJSON(
     aggregation: AggregationEnumToJSON(value.aggregation),
     max_limit: value.maxLimit,
     unit_price: value.unitPrice,
+    units_included: value.unitsIncluded,
     provider_id: value.providerId,
   }
 }
